# algokit-shared-config-forked

./: LICENSE  README.md  analysis_README.md  dependabot.yml
.github/: dependabot.yml  package.json
.github/actions/archive-artifact/: action.yml
.github/actions/devportal-publish-docs/: README.md  action.yml  generate-manifest.mjs
.github/actions/devportal-python-docs/: action.yml  conf.py
.github/actions/generate-bot-token/: action.yml
.github/actions/generate-python-docs/: action.yml  pyproject.toml
.github/actions/generate-typescript-docs/: action.yml  generate-typedoc-config.js  package.json  tsconfig.json  typedoc.base.json  typedoc.markdown.json
.github/actions/node-ci/: action.yml  package.json
.github/actions/publish-docs/: action.yml
.github/actions/release-package/: .releaserc.json  action.yml  package.json
.github/actions/run-build/: action.yml
.github/actions/setup-node-auth/: action.yml
.github/workflows/: algokit-build-docs.yml  algokit-node-build-zip.yml  build-and-publish-docs.yml  check-docs.yml  ci-python.yml  ci-typescript.yml  devportal-publish-docs.yml  handle-docs.yml  node-build-zip.yml  node-ci.yml  on-merge-main.yml  on-merge-release.yml  on-prod-release.yml  on-pull-request.yml  release-package.yml  typescript-ci.yml
.github/workflows/devportal/: publish-docs-dist.yml
.github/workflows/devportal/scripts/: generate-manifest.mjs  notify-devportal-test.mjs  notify-devportal.mjs
