[tool.poetry]
name = "algokit-python-docs-tooling"
version = "0.1.0"
description = "Internal Sphinx tooling for Algokit shared config docs generation."
authors = ["Algorand Foundation"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
sphinx = "^8.1.0"
myst-parser = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
